Added Certificates and paper types